fix(a11y): improved color contrast on links

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,9 @@
 
 @layer components {
     .link {
-        @apply text-blue-500 dark:text-blue-400;
+        @apply text-blue-600 dark:text-blue-300;
     }
     .mail {
-        @apply text-green-500 dark:text-green-400;
+        @apply text-green-600 dark:text-green-300;
     }
 }
